--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "codespaces-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^3.1.0"
-  },
+  "name": "@cloudflare-apps/create-cloudflare-app",
+  "version": "1.0.0",
+  "description": "Cloudflare Apps boilerplate featuring DNS powered by Webpack and Babel",
   "scripts": {
-    "start": "BROWSER=none WDS_SOCKET_PORT=0 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm-run-all dev:setup dev:webpack",
+    "dev:webpack": "webpack --watch --colors",
+    "dev:setup": "npm-run-all lint",
+    "build": "npm-run-all lint build:webpack",
+    "build:webpack": "NODE_ENV=production webpack --colors",
+    "lint": "node_modules/.bin/eslint --fix --ext .js src"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cloudflare-apps/create-cloudflare-app.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Cloudflare Inc.",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cloudflare-apps/create-cloudflare-app/issues"
+  },
+  "homepage": "https://github.com/cloudflare-apps/create-cloudflare-app#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "2.6.1",
+    "eslint-watch": "^4.0.2",
+    "extract-loader": "^3.0.0",
+    "file-loader": "^2.0.0",
+    "prettier": "^1.14.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "yarn-run-all": "^3.1.1"
   }
 }
